<resources>
    <string name="app_name">RemindDemo</string>
    <string name="create_schedule">创建日程</string>
    <string name="input_event_title">请输入事件标题</string>
    <string name="input_remark">请输入备注</string>
    <string name="start_time">开始时间</string>
    <string name="remind">提醒</string>
    <string name="main_date" formatted="true">%s年%s月</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="repeat">重复</string>
    <string name="ont_time">一次性活动</string>
    <string name="every_day">每天</string>
    <string name="week_one_five">周一到周五</string>
    <string name="custom">自定义</string>
    <string name="start">开始时</string>
    <string name="remind_setting">提醒设置</string>
    <string name="no_remind">不提醒</string>
    <string name="remind5m">提前5分钟</string>
    <string name="remind10m">提前10分钟</string>
    <string name="remind30m">提前30分钟</string>
    <string name="remind1h">提前一小时</string>
    <string name="remind1d">提前一天</string>
    <string name="activity_created">活动已创建</string>
</resources>