<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RepeatActivity">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back"
        android:onClick="back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text"
        android:text="@string/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/ib_back"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>

    <RadioGroup
        android:id="@+id/rg_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ont_time"
            android:textSize="20sp"
            android:padding="10dp"
            android:checked="true"
            android:button="@drawable/selector_rb_bg"
            android:textColor="@color/selector_tv_check"/>

        <RadioButton
            android:id="@+id/rb_every_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_day"
            android:textSize="20sp"
            android:padding="10dp"
            android:button="@drawable/selector_rb_bg"
            android:textColor="@color/selector_tv_check"/>

        <RadioButton
            android:id="@+id/rb_week_one_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week_one_five"
            android:textSize="20sp"
            android:padding="10dp"
            android:button="@drawable/selector_rb_bg"
            android:textColor="@color/selector_tv_check"/>

        <RadioButton
            android:id="@+id/rb_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:textSize="20sp"
            android:padding="10dp"
            android:button="@drawable/selector_rb_bg"
            android:textColor="@color/selector_tv_check"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>