<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RemindActivity">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back"
        android:onClick="back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text"
        android:text="@string/remind_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/ib_back"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_remind"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="20dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/text2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/text2"
                android:layout_margin="20dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/switch_remind"
                app:layout_constraintBottom_toTopOf="@id/tv_custom">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/rv_remind"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingLeft="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>